# picoserde-wasm-bindgen

./: Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/src/: canada.rs  citm_catalog.rs  lib.rs  twitter.rs
derive/: Cargo.toml
derive/src/: lib.rs  parse.rs  serde.rs  shared.rs
src/: de.rs  error.rs  lib.rs  ser.rs
