[package]
name = "picoserde-wasm-bindgen"
version = "0.1.3"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cloudflare/serde-wasm-bindgen"
description = "Native Serde adapter for wasm-bindgen"
categories = ["development-tools::ffi", "wasm", "encoding"]
keywords = ["serde", "serialization", "javascript", "wasm", "webassembly"]

[dependencies]
picoserde-derive-wasm-bindgen = { version = "^0.1", path = "derive" }
js-sys = "^0.3"
wasm-bindgen = "0.2.43"
fnv = "^1.0"

[dev-dependencies]
wasm-bindgen-test = "0.2.43"

[workspace]
members = ["derive"]

[profile.release]
lto = true
codegen-units = 1

[features]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]
